# foamer-eta

./: .envrc  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: deploy-dev.yml  deploy-prod.yml  deploy-stack.yml  pr.yml
cdk/: .gitignore  app.py  cdk.context.json  cdk.json  pyproject.toml
cdk/cdk/: cdk_stack.py  ci_stack.py  iot_stack.py
crates/api/: Cargo.toml  build.rs
crates/api/src/: fmt.rs  lib.rs  main.rs
crates/api/src/svc/: mod.rs
crates/api/tests/: integration_test.rs  svc_test.rs
crates/messages/: Cargo.toml
crates/messages/src/: lib.rs  main.rs
crates/messages/tests/: integration_test.rs
crates/svc/: Cargo.toml
crates/svc/src/: lib.rs  main.rs  svc.rs
crates/svc/tests/: svc_test.rs
crates/transit/: Cargo.toml
crates/transit/src/: lib.rs
crates/transit/tests/: integration_test.rs
firmware/foamer-display/: foamer-display.ino  platformio.ini  pyproject.toml
firmware/foamer-display/scripts/: embed_config.py  get-device-serial.py  provision-device.py
firmware/foamer-display/src/: aws_iot.h  config.cpp  config.h  display.cpp  display.h  main.cpp  network.h
firmware/profiles/: dev.json  example.json
frontend/: index.html  script.js  style.css
notes/: AWS_IOT_SETUP.md  api.md  design.key  design.md  firmware.md  gtfs.md  hardware.md  log.md  messages.md  parts.md  ride-metro.md  todo.md  transit-api.md
notes/design/: design.key
notes/static/: foamer-example.json  nearby-routes-example.json  nearby-routes-response.txt  stop-departures-example.json  stop-departures-response.txt  transit-openapi.json
static/: nearby-stops-example.json  ride-metro-entity.txt
