[workspace]
resolver = "2"
members = ["crates/api", "crates/transit", "crates/svc", "crates/messages"]

[workspace.dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rand = "0.8"
