[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
prost-types = "0.14"
tokio = { workspace = true }
reqwest = "0.12"
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = "0.7"
transit = { path = "../transit" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace"] }

[dev-dependencies]
tower = "0.5"
