[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
prost-types = "0.14"
tokio = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
transit = { path = "../transit" }
messages = { path = "../messages" }
